<resources>
    <string name="app_name">CSCB07_Project</string>
    <string name="owner">Owner</string>
    <string name="customer">Customer</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="textOfEmail">Please enter your email</string>
    <string name="textOfPassword">Please enter your password</string>
    <string name="customerLogin">Login</string>
    <string name="customerLogout">Logout</string>
    <string name="customerRegister">Register</string>
    <string name="textOfUsername">Please enter your username</string>
    <string name="ownerLogout">Logout</string>
    <string name="message">message</string>
    <string name="welcome">welcome</string>
    <string name="phoneNum">phoneNum</string>
</resources>
